manifests/50-routes/04-weather-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weather-route
  namespace: demo-weather
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: prod-web
      namespace: ingress-gateway
  hostnames:
    - weather.travels.sandbox3259.opentlc.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: /current }
        - path: { type: PathPrefix, value: /healthz }
      backendRefs:
        - name: weather
          port: 8080
